include region extraction chapter

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -2,3 +2,68 @@
     # "\newcommand{\printfirst}[2]{#1} "
     # "\newcommand{\singleletter}[1]{#1} "
     # "\newcommand{\switchargs}[2]{#2#1} " }
+
+@book{compgeom2008,
+  author    = {de Berg, Mark and
+               van Kreveld, Marc and
+               Overmars, Mark and
+               Schwarzkopf, Otfried},
+  title     = {Computational Geometry: Algorithms and Applications},
+  publisher = {Springer-Verlag},
+  year      = {2008},
+  edition   = {3.},
+  url       = {http://www.cs.uu.nl/geobook/}
+}
+
+@book{compvis2001,
+  author    = {Shapiro, Linda G. and
+               Stockman, George C.},
+  title     = {Computer Vision},
+  publisher = {Prentice Hall},
+  year      = {2001},
+  edition   = {1.},
+  url       = {http://www.cse.msu.edu/~stockman/Book/}
+}
+
+@inproceedings{DBLP:conf/cvpr/DalalT05,
+  author    = {Navneet Dalal and
+               Bill Triggs},
+  title     = {Histograms of Oriented Gradients for Human Detection},
+  booktitle = {CVPR (1)},
+  year      = {2005},
+  pages     = {886-893},
+  ee        = {http://dx.doi.org/10.1109/CVPR.2005.177},
+  crossref  = {DBLP:conf/cvpr/2005},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@proceedings{DBLP:conf/cvpr/2005,
+  title     = {2005 IEEE Computer Society Conference on  Computer Vision
+               and Pattern Recognition (CVPR 2005), 20-26 June 2005, San
+               Diego, CA, USA},
+  booktitle = {CVPR},
+  publisher = {IEEE Computer Society},
+  year      = {2005},
+  isbn      = {0-7695-2372-2},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@book{DBLP:books/garland/Roberts63,
+  author    = {Lawrence G. Roberts},
+  title     = {Machine Perception of Three-Dimensional Solids},
+  publisher = {Garland Publishing, New York},
+  series    = {Outstanding Dissertations in the Computer Sciences},
+  year      = {1963},
+  isbn      = {0-8240-4427-4},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@article{braden1986,
+  author    = {Braden, Bart},
+  title     = {The Surveyor's Area Formular},
+  journal   = {The College Mathematics Journal},
+  year      = {1986},
+  month     = {September},
+  number    = {4},
+  pages     = {326--337}
+}
