--- a/doc/main.tex
+++ b/doc/main.tex
@@ -86,6 +86,8 @@ wurden ausdrücklich als solche gekennzeichnet.\\[2ex]
 \footnotesize \dcauthornameewie
 \end{tabular}
 
+\input{tex/region-extraction}
+
 \cleardoublepage
 \begin{appendix}
 \end{appendix}
