add dilation, connected components labeling and convex hull to doc

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -86,7 +86,7 @@ wurden ausdrücklich als solche gekennzeichnet.\\[2ex]
 \footnotesize \dcauthornameewie
 \end{tabular}
 
-\input{tex/region-extraction}
+\input{tex/content}
 
 \cleardoublepage
 \begin{appendix}
