fix documentation formatting

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -27,6 +27,7 @@
 
 \usepackage{ae}
 \usepackage{aecompl}
+\usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage[ngerman]{babel}
 \usepackage{calc}
@@ -49,8 +50,8 @@
 
 \usepackage{user}
 
-\pagestyle{scrheadings}
-\setkomafont{pagehead}{\small\scshape}
+%\pagestyle{scrheadings}
+%\setkomafont{pagehead}{\small\scshape}
 
 \setcounter{tocdepth}{3}
 
@@ -63,8 +64,8 @@
 \input{tex/meta}
 \input{tex/title}
 
-\manualmark
-\markboth{Literaturverzeichnis}{Literaturverzeichnis}
+%\manualmark
+%\markboth{Literaturverzeichnis}{Literaturverzeichnis}
 \bibliographystyle{user}
 \bibliography{literature}
 \cleardoublepage
