--- a/doc/tex/basics/connected-components.tex
+++ b/doc/tex/basics/connected-components.tex
@@ -1,4 +1,4 @@
-\subsubsection*{Connected Components Labeling}
+\section*{Connected Components Labeling}
 
 Um zusammenhängende Bildstrukturen zu erfassen verwendet man dass sogenannte
 Connected Components Labeling. Dabei wird jeder Bildpunkt genau einer Menge
