--- a/doc/tex/basics/dilation.tex
+++ b/doc/tex/basics/dilation.tex
@@ -1,14 +1,13 @@
-\subsubsection*{Dilation}
+\section*{Dilation}
 
 Die Dilatation ist eine morphologische Operation um Strukturen eines Bildes zu
 vergrößern.
 Für die Dilation eines Grauwertbildes wird jedem Pixel der Maximalwert aller
 Pixel innerhalb einer gewissen Umgebung zugewiesen.
-Für die Beschreibung der Umgebung verwendet man ein Strukturelement fester
-Größe und Form (z.B. ein 3$\times$3 Quadrat).
-
+Für die Beschreibung der Umgebung verwendet man ein Strukturelement fester Größe
+und Form (z.B. ein 3$\times$3 Quadrat).
   \[ (I \oplus K)(x) =
-       \max \{ I_{x+t} | t \in D(K) \} \forall x \in D(I) \]
-
-Durch die Anwendung einer Dilation können Bildstrukturen zusammengefasst
-werden wenn deren Abstand kleiner ist als die Größe des Strukturelements.
+       \max \left\{ I(x+t) \;\middle|\; t \in \mathcal{D}^*(K)\right\}
+       \quad\forall x \in \mathcal{D}(I) \]
+Durch die Anwendung einer Dilation können Bildstrukturen zusammengefasst werden
+wenn deren Abstand kleiner ist als die Größe des Strukturelements.
