document edge detection

--- a/doc/tex/basics.tex
+++ b/doc/tex/basics.tex
@@ -3,3 +3,4 @@
 \input{tex/basics/dilation}
 \input{tex/basics/connected-components}
 \input{tex/basics/convex-hull}
+\input{tex/basics/edge-detection}
