fix some formatting flaws, typos and correct formulas

--- a/doc/tex/basics/convex-hull.tex
+++ b/doc/tex/basics/convex-hull.tex
@@ -18,5 +18,5 @@ Die untere Hülle $L$ wird analog zu $U$ erzeugt.
 Jedoch werden die Punkte in umgekehrter Reihenfolge betrachtet.
 Zudem \emph{müssen} die letzten 2 Punkte zusammen mit dem aktuell betrachteten
 Punkt eine Rechtskurve bilden. Abschließend werden $U$ und $L$ so zusammen
-gefasst, dass die konvexe Hülle als Liste von Eckpunkten im Uhrzeigersinn
-ergibt.
+gefasst, dass diese die konvexe Hülle als Liste von Eckpunkten im Uhrzeigersinn
+ergeben.
