Added some chapters and made little changes to the existing ones. Lots of structures came into existence.

--- a/doc/tex/basics/dilation.tex
+++ b/doc/tex/basics/dilation.tex
@@ -1,5 +1,8 @@
 \section*{Dilation}
 
+% Erosion und Dilation, Öffnen und Schliessen
+% aus Voss & Süße 1991
+
 Die Dilatation ist eine morphologische Operation um Strukturen eines Bildes zu
 vergrößern.
 Für die Dilation eines Grauwertbildes wird jedem Pixel der Maximalwert aller
