--- a/doc/tex/content.tex
+++ b/doc/tex/content.tex
@@ -1,2 +1,6 @@
+\input{tex/introduction}
 \input{tex/basics}
+\input{tex/barcodes}
 \input{tex/region-extraction}
+\input{tex/classes}
+%\input{tex/evaluation}
