Just some words in the 'Selbstständigkeitserklärung' corrected.

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -72,10 +72,10 @@
 
 \chapter*{Selbstständigkeitserklärung}
 
-Hiermit erkläre ich, daß ich die vorliegende Arbeit
+Hiermit erklären wir, daß wir die vorliegende Arbeit
 selbstständig angefertigt, nicht anderweitig zu Prüfungszwecken vorgelegt und
-keine anderen als die angegebenen Hilfsmittel verwendet habe. Sämtliche 
-wissentlich verwendete Textausschnitte, Zitate oder Inhalte anderer Verfasser 
+keine anderen als die angegebenen Hilfsmittel verwendet haben. Sämtliche 
+wissentlich verwendeten Textausschnitte, Zitate oder Inhalte anderer Verfasser 
 wurden ausdrücklich als solche gekennzeichnet.\\[2ex]
 \dcplace, den \dcdate\\[10ex]
 \begin{tabular}{p{5cm} p{5cm}}\hline
