add package "todonotes" to mark and display open issues

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -48,6 +48,8 @@
 \usepackage{tabularx}
 \usepackage{thumbpdf}
 
+\usepackage{todonotes}
+
 \usepackage{user}
 
 %\pagestyle{scrheadings}
@@ -63,6 +65,8 @@
 \begin{document}
 \input{tex/meta}
 \input{tex/title}
+
+\listoftodos
 
 %\manualmark
 %\markboth{Literaturverzeichnis}{Literaturverzeichnis}
