--- a/doc/tex/basics.tex
+++ b/doc/tex/basics.tex
@@ -4,3 +4,4 @@
 \input{tex/basics/connected-components}
 \input{tex/basics/convex-hull}
 \input{tex/basics/edge-detection}
+\input{tex/basics/segmentation}
