--- a/doc/tex/basics/dilation.tex
+++ b/doc/tex/basics/dilation.tex
@@ -3,13 +3,8 @@
 % Erosion und Dilation, Öffnen und Schliessen
 % aus Voss & Süße 1991
 
-Die Dilatation ist eine morphologische Operation um Strukturen eines Bildes zu
-vergrößern.
-Für die Dilation eines Grauwertbildes wird jedem Pixel der Maximalwert aller
-Pixel innerhalb einer gewissen Umgebung zugewiesen.
-Für die Beschreibung der Umgebung verwendet man ein Strukturelement fester Größe
-und Form (z.B. ein 3$\times$3 Quadrat).
-  \[ (I\oplus K)(x,y)=\max\left\{I(x+u,y+v)\;\middle|\;(u,v)\in K\right\}
-       \quad K\subseteq\mathbb{Z}^2 \]
-Durch die Anwendung einer Dilation können Bildstrukturen zusammengefasst werden
-wenn deren Abstand kleiner ist als die Größe des Strukturelements.
+Die Dilatation ist eine morphologische Operation um Strukturen eines Bildes zu vergrößern.
+Für die Dilation eines Grauwertbildes wird jedem Pixel der Maximalwert aller Pixel innerhalb einer gewissen Umgebung zugewiesen.
+Für die Beschreibung der Umgebung verwendet man ein Strukturelement fester Größe und Form (z.B. ein 3$\times$3 Quadrat).
+  \[ (I\oplus K)(x,y)= \max \left\{ I(x+u,y+v) \;\middle|\; (u,v) \in K \right\} \quad K \subseteq \mathbb{Z}^2 \]
+Durch die Anwendung einer Dilation können Bildstrukturen zusammengefasst werden wenn deren Abstand kleiner ist als die Größe des Strukturelements.
