--- a/doc/tex/basics/convex-hull.tex
+++ b/doc/tex/basics/convex-hull.tex
@@ -8,6 +8,6 @@ Die obere Hülle wird erzeugt indem über alle Punkte der Menge $M$ entsprechend
   \[ (x,y) < (u, v) \Longleftrightarrow x < u \vee x = u \wedge y < v \]
 iteriert, und wiederholt das letzte Element in $U$ entfernt wird solange $U$ mindestens 2 Punkte enthält und die letzten 2 Punkte zusammen mit dem aktuell betrachteten Punkt \emph{keine} Rechtskurve bilden.
 Anschließend wird der aktuelle Punkt ans Ende von $U$ eingefügt.
-Die untere Hülle $L$ wird analog zu $U$ erzeugt.
-Jedoch werden die Punkte in umgekehrter Reihenfolge betrachtet.
-Zudem \emph{müssen} die letzten 2 Punkte zusammen mit dem aktuell betrachteten Punkt eine Rechtskurve bilden. Abschließend werden $U$ und $L$ so zusammen gefasst, dass diese die konvexe Hülle als Liste von Eckpunkten im Uhrzeigersinn ergeben.
+Die Erzeugung der unteren Hülle $L$ erfolgt analog $U$, jedoch unter Betrachtung der Punkte in umgekehrter Reihenfolge.
+Zudem \emph{müssen} die letzten 2 Punkte zusammen mit dem aktuell betrachteten Punkt eine Rechtskurve bilden.
+Abschließend werden $U$ und $L$ so zusammen gefasst, dass diese die konvexe Hülle als Liste von Eckpunkten im Uhrzeigersinn ergeben.
