add command \writtenby{<name>} to freely indicate author of a piece of text

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -79,6 +79,10 @@
     use, targetNamespace,elementFormDefault,encoding}
 }
 
+\newcommand{\writtenby}[1]{%
+  \todo[nolist,inline,color=yellow!50]{#1}\noindent%
+}
+
 %\pagestyle{scrheadings}
 %\setkomafont{pagehead}{\small\scshape}
 
