Better description and a little introduction for the chapter.

--- a/doc/tex/classes.tex
+++ b/doc/tex/classes.tex
@@ -1,3 +1,7 @@
 \chapter{Implementierung}
+In diesem Kapitel werden Ausschnitte aus der Implementation beschrieben, um einen einfachen Überblick über die Funktionen zu bekommen.
+
+Dabei wird nicht jede einzelne Funktion aufgeführt, sondern nur die wichtigsten für die korrekte Verarbeitung.
 
 \input{tex/classes/imageprocessing}
+\input{tex/classes/improveimage}
